# oap-dev

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json
app/: globals.css  layout.tsx
components/: AppCard.tsx  CodeBlock.tsx  DashboardManifestList.tsx  DashboardStats.tsx  DiscoverResult.tsx  DiscoverSearch.tsx  Footer.tsx  Header.tsx  ManifestViewer.tsx  PlaygroundEditor.tsx  PlaygroundResult.tsx  RegistryHeader.tsx  SearchBar.tsx  TrustBadges.tsx  TrustFlow.tsx  TrustLookup.tsx
docs/: A2A.md  AGENT.md  ARCHITECTURE.md  FUTURE.md  MANIFEST.md  MANIFESTO.md  MANIFEST_2_0.md  MCP.md  OAP-PROCEDURAL-MEMORY-PAPER.md  OLLAMA.md  OPENAPI-TOOL-SERVER.md  OPENCLAW.md  PATH-TO-23-TOKENS.md  PIPER.md  README.md  REGISTRY.md  ROBOTICS.md  SECURITY.md  (+6 more)
reference/oap_agent/: config.yaml  config.yaml.example  pyproject.toml
reference/oap_agent/frontend/: index.html  package-lock.json  package.json  vite.config.ts
reference/oap_agent/frontend/src/: App.tsx  index.css
reference/oap_agent/frontend/src/components/: AgentEventProvider.tsx  AgentLayout.tsx  AgentSidebar.tsx  AvatarDisplay.tsx  ChatInput.tsx  ChatMessage.tsx  ChatView.tsx  CronInput.tsx  ExperienceBadge.tsx  Markdown.tsx  PersonaAvatar.tsx  SettingsView.tsx  TaskDetail.tsx  TaskForm.tsx  TaskList.tsx  TaskRunDetail.tsx  ToolCallCard.tsx
reference/oap_agent/frontend/src/hooks/: useAvatarAnimation.ts  useAvatarState.ts  useTTS.ts  useVoiceRecorder.ts
reference/oap_agent/frontend/src/lib/: personaStyles.ts  types.ts
reference/oap_agent/oap_agent/: api.py  config.py  db.py  events.py  executor.py  memory.py  scheduler.py  transcribe.py  tts.py
reference/oap_agent/oap_agent/static/: index.html
reference/oap_agent/oap_agent/static/assets/: index--cCqKRKU.js  index-4mkW-n_B.js  index-5CoX5sEV.css  index-5_BWaAVA.css  index-7d2JgJWD.js  index-At3fgvRv.js  index-B1KP6dPX.js  index-B49bsmza.js  index-B5_-LV7-.js  index-B6qUcEZF.js  index-B76UyW6v.js  index-BAovreBK.js  index-BFkSwvg7.js  index-BJDe8yeq.css  index-BNMnuBXo.js  index-BOQBuWLf.js  index-BQ2BgI-C.css  index-BQ4t2cua.js  index-BQr7XYjL.js  index-BSFe6W-A.css  index-BSOqXBRl.css  index-BSb4U_Sp.js  index-BSzIc6ax.css  index-BZIm3GgQ.js  index-BcGDnztv.js  index-BjMjqWlf.js  index-Bqr30Lmi.js  index-C2pLiRpp.css  index-C30So579.js  index-C6p76B19.js  index-C7iKta3o.js  index-C8iwU-NZ.css  index-CAqRflvE.js  index-CDF2Zfuy.js  index-CDWHOpM3.js  index-CFk9Wb0e.js  index-CIjd08r7.js  index-CRE1zSon.js  index-CVo9Zjw4.css  index-C_bC00MP.js  (+50 more)
reference/oap_dashboard/: config.yaml  pyproject.toml  seeds.txt
reference/oap_dashboard/oap_dashboard/: api.py  crawler.py  db.py
reference/oap_discovery/: README.md  __init__.py  api.py  config.yaml  config.yaml.example  crawler.py  credentials.example.yaml  db.py  discovery.py  models.py  ollama_client.py  pyproject.toml  seeds.txt  validate.py
reference/oap_discovery/manifests/: .factory-exclude  alpha-vantage.json  apropos.json  awk.json  bc.json  coingecko.json  column.json  country-info.json  cut.json  date.json  dictionary.json  earthquake.json  exchange-rate.json  geocode.json  grep.json  ip-geolocation.json  jq.json  man.json  newsapi-everything.json  newsapi-top-headlines.json  oap-email.json  oap-reminder.json  open-library.json  open-meteo.json  paste.json  sed.json  sunrise-sunset.json  tr.json  wc.json  wikipedia.json  zip-lookup.json
reference/oap_discovery/oap_discovery/: api.py  cli.py  config.py  crawler.py  db.py  discovery.py  escalation.py  experience_api.py  experience_engine.py  experience_models.py  experience_store.py  fts_store.py  invoker.py  models.py  ollama_client.py  openapi_server.py  sandbox.py  tool_api.py  tool_converter.py  tool_executor.py  tool_models.py
reference/oap_discovery/seeds/: at.json  fingerstring.json  grep.json
reference/oap_discovery/tests/: conftest.py  test_discovery.py  test_experience.py  test_fts_store.py  test_tool_bridge.py  test_validate.py
reference/oap_email/: README.md  config.yaml.example  pyproject.toml
reference/oap_email/oap_email/: api.py  classifier.py  config.py  db.py  imap.py  models.py  sanitize.py
reference/oap_mcp/: pyproject.toml
reference/oap_mcp/oap_mcp/: client.py  server.py
reference/oap_trust/: README.md  config.yaml  pyproject.toml
reference/oap_trust/oap_trust/: __init__.py  api.py  attestation.py  capability_test.py  cli.py  config.py  db.py  dns_challenge.py  keys.py  manifest.py  models.py
reference/oap_trust/tests/: conftest.py  test_api.py  test_attestation.py  test_keys.py  test_manifest.py
(+130 files in other folders)
