[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oap-discovery"
version = "0.1.0"
description = "OAP reference discovery stack — crawl, index, and discover capability manifests"
readme = "README.md"
license = "CC0-1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "chromadb>=0.6",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
oap-crawl = "oap_discovery.crawler:main"
oap-api = "oap_discovery.api:main"
oap = "oap_discovery.cli:cli"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
